[package]
name = "dtw"
version = "0.1.0"
edition = "2024"

description = "Dynamic time warping (DTW) algorithm and approximations implementation"
homepage = "https://github.com/Ledger-Donjon/dtw"
repository = "https://github.com/Ledger-Donjon/dtw"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
num-traits = "0.2.19"
